arreglos finales ouditt

--- a/template2.html
+++ b/template2.html
@@ -22,7 +22,7 @@
                 <div class="row">
                     <div class="col">
                         <p class="text-justify">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, assumenda ab
+                            Un vagabundo sin remedio pero al conocerlo te das cuenta que no es tan malo.
                         </p>
                     </div>
                 </div>
@@ -32,12 +32,12 @@
                     <div class="col-6">
                         <img src="assets/amigo2.jpg" class="img-fluid w-100 h-100 float-left">
                     </div>
-                    <div class="col-6"><p class="text-right">Araon</p></div>
+                    <div class="col-6"><p class="text-right">Jeshua</p></div>
                 </div>
                 <div class="row">
                     <div class="col">
                         <p class="text-justify">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, assumenda ab
+                            Un baterista de lo mejor, unico aunque algo flojo, hay talento solo falta apoyo<br>
                         </p>
                     </div>
                 </div>
@@ -47,12 +47,12 @@
                     <div class="col-6">
                         <img src="assets/amigo3.jpg" class="img-fluid w-100 h-100 float-left">
                     </div>
-                    <div class="col-6"><p class="text-right">Araon</p></div>
+                    <div class="col-6"><p class="text-right">Lalo</p></div>
                 </div>
                 <div class="row">
                     <div class="col">
                         <p class="text-justify">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, assumenda ab
+                            Traficante, vendedor caduco, fumador compulsivo, "Deja ahi lalo".
                         </p>
                     </div>
                 </div>
@@ -62,12 +62,12 @@
                     <div class="col-6">
                         <img src="assets/amigo4.jpg" class="img-fluid w-100 h-100 float-left">
                     </div>
-                    <div class="col-6"><p class="text-right">Araon</p></div>
+                    <div class="col-6"><p class="text-right">Tona</p></div>
                 </div>
                 <div class="row">
                     <div class="col">
                         <p class="text-justify">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, assumenda ab
+                            Vaya vaya si vemos un viciado del fortnite, sera mejor que no lo retes mami
                         </p>
                     </div>
                 </div>
@@ -79,12 +79,12 @@
                     <div class="col-6">
                         <img src="assets/amigo5.jpg" class="img-fluid w-100 h-100 float-left">
                     </div>
-                    <div class="col-6"><p class="text-right">Araon</p></div>
+                    <div class="col-6"><p class="text-right">Gio</p></div>
                 </div>
                 <div class="row">
                     <div class="col">
                         <p class="text-justify">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, assumenda ab
+                            Combatientes V en clash royale pero un fiasco en el resto de los juegos
                         </p>
                     </div>
                 </div>
@@ -94,12 +94,12 @@
                     <div class="col-6">
                         <img src="assets/amigo6.jpg" class="img-fluid w-100 h-100 float-left">
                     </div>
-                    <div class="col-6"><p class="text-right">Araon</p></div>
+                    <div class="col-6"><p class="text-right">Fer</p></div>
                 </div>
                 <div class="row">
                     <div class="col">
                         <p class="text-justify">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, assumenda ab
+                            Un gei ojala que no me lo tope nunca en mi camino por que me lo hecho.
                         </p>
                     </div>
                 </div>
@@ -109,12 +109,12 @@
                     <div class="col-6">
                         <img src="assets/amigo7.jpg" class="img-fluid w-100 h-100 float-left">
                     </div>
-                    <div class="col-6"><p class="text-right">Araon</p></div>
+                    <div class="col-6"><p class="text-right">Axel</p></div>
                 </div>
                 <div class="row">
                     <div class="col">
                         <p class="text-justify">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, assumenda ab
+                            Axel Biskit otro baterista mediocre mas que suena super, ademas toca la pinga
                         </p>
                     </div>
                 </div>
@@ -124,12 +124,12 @@
                     <div class="col-6">
                         <img src="assets/amigo8.jpg" class="img-fluid w-100 h-100 float-left">
                     </div>
-                    <div class="col-6"><p class="text-right">Araon</p></div>
+                    <div class="col-6"><p class="text-right">Alex</p></div>
                 </div>
                 <div class="row">
                     <div class="col">
                         <p class="text-justify">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, assumenda ab
+                            Nersios siempre y no pregunta, un dia debeias de preguntarte que haces aca.
                         </p>
                     </div>
                 </div>
@@ -141,12 +141,12 @@
                     <div class="col-6">
                         <img src="assets/amigo9.jpg" class="img-fluid w-100 h-100 float-left">
                     </div>
-                    <div class="col-6"><p class="text-right">Araon</p></div>
+                    <div class="col-6"><p class="text-right">Alan</p></div>
                 </div>
                 <div class="row">
                     <div class="col">
                         <p class="text-justify">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, assumenda ab
+                            Homosexual detectado, parece que a los de dual no les esta llendo tan bien ah.
                         </p>
                     </div>
                 </div>
@@ -156,12 +156,12 @@
                     <div class="col-6">
                         <img src="assets/amigo10.jpg" class="img-fluid w-100 h-100 float-left">
                     </div>
-                    <div class="col-6"><p class="text-right">Araon</p></div>
+                    <div class="col-6"><p class="text-right">Ruben</p></div>
                 </div>
                 <div class="row">
                     <div class="col">
                         <p class="text-justify">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, assumenda ab
+                            Primer lugar del cubo rubic en el cecytem, ultimo lugar del cuadro de honor,dilemas
                         </p>
                     </div>
                 </div>
@@ -171,12 +171,12 @@
                     <div class="col-6">
                         <img src="assets/amigo11.jpg" class="img-fluid w-100 h-100 float-left">
                     </div>
-                    <div class="col-6"><p class="text-right">Araon</p></div>
+                    <div class="col-6"><p class="text-right">Omar</p></div>
                 </div>
                 <div class="row">
                     <div class="col">
                         <p class="text-justify">
-                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque, assumenda ab
+                            Ojala que este bastardose vaya muy a la pitufichin**** por queno lo voy a extrañar
                         </p>
                     </div>
                 </div>
@@ -186,10 +186,10 @@
                     <div class="col-6">
                         <img src="assets/amigo12.jpg" class="img-fluid w-100 h-100 float-left">
                     </div>
-                    <div class="col-6"><p class="text-right">Araon</p></div>
+                    <div class="col-6"><p class="text-right">Leo</p></div>
                 </div>
                 <div class="row">
-                    <p class="col">Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique, nobis eliasdsa</p>
+                    <p class="col">Si y no, no y si, no se que le sucede pero seguramente el tampoc, no se preocupen</p>
                 </div>
         </div>
         <div class="col">
