--- a/template3.html
+++ b/template3.html
@@ -18,9 +18,7 @@
         </div>
         <div class="row">
             <p class="col text-justify bg-dark text-light  m-1 p-1 h5">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur, nostrum cum. Tenetur nostrum beatae at. Debitis doloribus corrupti autem adipisci voluptatem molestiae dolores quasi atque facere nisi! In, id magnam.
-                Praesentium hic, accusamus et autem ea quaerat voluptates non ut corporis minima, eaque quos dolores? Harum corrupti debitis magnam? Hic expedita voluptatum odit eum, repellat fuga nulla? Hic, corrupti quos!
-                Nisi iusto enim in? Exercitationem quae id laboriosam, velit voluptates recusandae quos placeat dolore, quod labore fugiat dolor atque obcaecati quibusdam, deleniti assumenda quaerat voluptate? Veritatis eum commodi illo delectus!
+                No tengo mucho que decir, aun me falta un buen tramo de la preparatoria para poder dar el gran discurso, puedo decir que hasta ahora de lo que mas eh aprendido es acerca de bootrtrap por que los demas lenguajes de programacion simplemente se basa en la logica, seguramente vuelva al aburrimiento en cuanto empecemos con php por que es muy similar a lo que ya habia investigado con anterioridad, solo espero que esto no se vuelva tan tedioso como ya habia sido
             </p>
         </div>
         <div class="row">
