--- a/template5.html
+++ b/template5.html
@@ -13,7 +13,25 @@
                 Mis amigos favoritos
             </p>
         </header>
-        
+        <div class="row">
+            <div class="col-6">
+                <img src="assets/amigo1.jpg" class="img-fluid img-thumbnail  w-100 h-100  border border-5 border-dark">
+            </div>
+            <div class="col-6">
+                <img src="assets/amigo6.jpg" class="img-fluid img-thumbnail border border-dark h-100 ">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-6">
+                <img src="assets/amigo12.jpg" class="img-fluid img-thumbnail border-dark w-100 h-100">
+            </div>
+            <div class="col-6">
+                <img src="assets/amigo11.jpg" class="img-fluid img-thumbnail border border-dark">
+            </div>
+            <div class="col">
+                <a href="template1.html" class="btn btn-success col m-1">Regresar</a><br>
+            </div>
+        </div>
     </div>
 </body>
 </html>
