Añadidas bases finales

--- a/template2.html
+++ b/template2.html
@@ -17,7 +17,7 @@
                     <div class="col-6">
                         <img src="assets/amigo1.jpg" class="img-fluid w-100 h-100 float-left">
                     </div>
-                    <div class="col-6"><p class="text-right">Araon</p></div>
+                    <div class="col-6"><p class="text-center">Araon</p></div>
                 </div>
                 <div class="row">
                     <div class="col">
@@ -32,7 +32,7 @@
                     <div class="col-6">
                         <img src="assets/amigo2.jpg" class="img-fluid w-100 h-100 float-left">
                     </div>
-                    <div class="col-6"><p class="text-right">Jeshua</p></div>
+                    <div class="col-6"><p class="text-center">Jeshua</p></div>
                 </div>
                 <div class="row">
                     <div class="col">
@@ -47,7 +47,7 @@
                     <div class="col-6">
                         <img src="assets/amigo3.jpg" class="img-fluid w-100 h-100 float-left">
                     </div>
-                    <div class="col-6"><p class="text-right">Lalo</p></div>
+                    <div class="col-6"><p class="text-center">Lalo</p></div>
                 </div>
                 <div class="row">
                     <div class="col">
@@ -62,7 +62,7 @@
                     <div class="col-6">
                         <img src="assets/amigo4.jpg" class="img-fluid w-100 h-100 float-left">
                     </div>
-                    <div class="col-6"><p class="text-right">Tona</p></div>
+                    <div class="col-6"><p class="text-center">Tona</p></div>
                 </div>
                 <div class="row">
                     <div class="col">
@@ -76,7 +76,7 @@
         <div class="row">
             <div class="col-3">
                 <div class="row">
-                    <div class="col-6">
+                    <div class="col-6 float-right">
                         <img src="assets/amigo5.jpg" class="img-fluid w-100 h-100 float-left">
                     </div>
                     <div class="col-6"><p class="text-right">Gio</p></div>
@@ -94,7 +94,7 @@
                     <div class="col-6">
                         <img src="assets/amigo6.jpg" class="img-fluid w-100 h-100 float-left">
                     </div>
-                    <div class="col-6"><p class="text-right">Fer</p></div>
+                    <div class="col-6"><p class="text-center">Fer</p></div>
                 </div>
                 <div class="row">
                     <div class="col">
@@ -109,7 +109,7 @@
                     <div class="col-6">
                         <img src="assets/amigo7.jpg" class="img-fluid w-100 h-100 float-left">
                     </div>
-                    <div class="col-6"><p class="text-right">Axel</p></div>
+                    <div class="col-6"><p class="text-center">Axel</p></div>
                 </div>
                 <div class="row">
                     <div class="col">
@@ -124,7 +124,7 @@
                     <div class="col-6">
                         <img src="assets/amigo8.jpg" class="img-fluid w-100 h-100 float-left">
                     </div>
-                    <div class="col-6"><p class="text-right">Alex</p></div>
+                    <div class="col-6"><p class="text-center">Alex</p></div>
                 </div>
                 <div class="row">
                     <div class="col">
@@ -141,7 +141,7 @@
                     <div class="col-6">
                         <img src="assets/amigo9.jpg" class="img-fluid w-100 h-100 float-left">
                     </div>
-                    <div class="col-6"><p class="text-right">Alan</p></div>
+                    <div class="col-6"><p class="text-cwnter">Alan</p></div>
                 </div>
                 <div class="row">
                     <div class="col">
@@ -156,11 +156,11 @@
                     <div class="col-6">
                         <img src="assets/amigo10.jpg" class="img-fluid w-100 h-100 float-left">
                     </div>
-                    <div class="col-6"><p class="text-right">Ruben</p></div>
+                    <div class="col-6"><p class="text-center">Ruben</p></div>
                 </div>
                 <div class="row">
                     <div class="col">
-                        <p class="text-justify">
+                        <p class="text-center">
                             Primer lugar del cubo rubic en el cecytem, ultimo lugar del cuadro de honor,dilemas
                         </p>
                     </div>
@@ -171,7 +171,7 @@
                     <div class="col-6">
                         <img src="assets/amigo11.jpg" class="img-fluid w-100 h-100 float-left">
                     </div>
-                    <div class="col-6"><p class="text-right">Omar</p></div>
+                    <div class="col-6"><p class="text-center">Omar</p></div>
                 </div>
                 <div class="row">
                     <div class="col">
@@ -186,7 +186,7 @@
                     <div class="col-6">
                         <img src="assets/amigo12.jpg" class="img-fluid w-100 h-100 float-left">
                     </div>
-                    <div class="col-6"><p class="text-right">Leo</p></div>
+                    <div class="col-6"><p class="text-center">Leo</p></div>
                 </div>
                 <div class="row">
                     <p class="col">Si y no, no y si, no se que le sucede pero seguramente el tampoc, no se preocupen</p>
